tests/errors/while-let-enum-ref-binding-mode.ari
enum MaybeWide {
  Empty,
  Full(i64),
}

fn main() -> i64 {
  let item: MaybeWide = Full(1);
  while let Full(ref value) = item {
    return 1;
  }
  return 0;
}
